@@ -20,8 +20,11 @@ NOTE: Do not "tidy" or change the indenting here, or we break svn annotate
     - fixed behaviour of the close button for the bottom tabs (Output,
       Errors, Syntax Check): closing a tab now toggles the corresponding
       menu and config items (Zeno Gantner)
-    - Updated German and Chinese translation (Zeno Gantner and Chuanren Wu)
-      
+    - Updated German translation (Zeno Gantner)
+    - Updated Chinese translation (Chuanren Wu)
+    - fixed ticket #939: "Padre 'help' depends on POD2-Base on Strawberry
+      Perl on Windows XP" (ADAMK)
+    - Updated Italian translation (Simone Blandino)
 
 0.60 2010.04.20
     - Add FTP connection caching/sharing (SEWI)
